<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/unit_converter"
        android:textSize="45sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/like_to_convert"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--include tage made the app "stop working" in emulator-->

<!--    <include layout="@layout/convert_section" android:id="@+id/convert_section"/>-->
    <TextView
        android:text="@string/temperature"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_margin="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_input"
        android:layout_margin="25dp"
        android:padding="13dp"
        android:hint="@string/enter_amount"
        android:gravity="center"
        android:backgroundTint="@color/black"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        android:inputType="number"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Enter Amount"/>
    <TextView
        android:id="@+id/txt_final_answer"
        tools:text="final answer"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/celsius"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_margin="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/into"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/fahrenheit"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_margin="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

<!--    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_convert"
        android:padding="22dp"
        android:text="@string/btn_text_convert"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/btn_convert_bg"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:layout_width="110dp"
        android:layout_height="wrap_content"/>
-->


</androidx.appcompat.widget.LinearLayoutCompat>